--- a/info/templates/info/info.html
+++ b/info/templates/info/info.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Hello I am info</h2>
+<div class="container" id="info_container">
+    <div class="row">
+        <div class="col">
+            <h2>Find Us</h2>
+            <div id="information">
+                <p><i class="fas fa-map-marked-alt"></i> Address: Athens 118 54, Greece</p>
+                <p><i class="fas fa-clock"></i> Hours: 11AM ⋅ 10PM</p>
+                <p><i class="fas fa-phone"></i> Phone: +30 21 0346 1589</p>
+                <p><i class="fas fa-subway"></i> Public transit access: Kerameikos, Thēseio</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
