--- a/templates/base.html
+++ b/templates/base.html
@@ -13,50 +13,46 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row head_row">
-                <!-- here goes the logo -->
-                <div class="col">
-                    <a href="{% url 'index' %}" id="logo"><h1>Food Court</h1></a>
-                </div>
-                <div class="col nav_bar">
-                    <!-- Beginning of navigation bar -->
-                    <ul>
-                        {% if not request.user.is_authenticated %}
-                            <li>
-                                <a href="{% url 'booknow' %}">Make a booking</a>               
-                            </li>
-                        {% endif %}  
-                        {% if request.user.is_authenticated %}
-                            <li>
-                                <a href="{% url 'booknow' %}">Book Now</a>
-                            </li>
-                            {% if  user.username != "admin" %}
-                                <li>
-                                    <a href="{% url 'booking' %}">My Bookings</a>
-                                </li>
-                            {% else %}
-                                <li>
-                                    <a href="{% url 'booking' %}">All Bookings</a>
-                                </li>
-                            {% endif %}
-                        {% endif %}
-                        <li>
-                            <a href="{% url 'menu' %}">Menu</a>                            
+        <nav class="navbar navbar-expand-sm navbar-dark" id="navbar">
+            <a href="{% url 'index' %}" id="logo" class="navbar-brand"><h1>Food Court</h1></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                {% if not request.user.is_authenticated %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'booknow' %}">Make a booking <span class="sr-only">(current)</span></a>
+                    </li>
+                {% endif %} 
+                {% if request.user.is_authenticated %} 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'booknow' %}">Book Now</a>
+                    </li>
+                    {% if  user.username != "admin" %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'booking' %}">My Bookings</a>
                         </li>
-                        <li>
-                            <a href="{% url 'info' %}">Contact Us</a>
+                    {% else %}
+                        <li class="nav-item">
+                        <a class="nav-link" href="{% url 'booking' %}">All Bookings</a>
                         </li>
-                        {% if request.user.is_authenticated %}
-                            <li>
-                                <a href="{% url 'account_logout' %}" >Logout</a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                    <!-- End of navigation bar -->
-                </div>
+                    {% endif %}
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'menu' %}">Menu</a>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'info' %}">Contact Us</a>
+                </li>
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_logout' %}" >Logout</a>
+                    </li>
+                {% endif %}
+              </ul>
             </div>
-        </div>
+          </nav>
     </header>
     <section id="base_container">
         {% block content%}
@@ -69,8 +65,10 @@
             <div class="row">
                 <div class="col">
                     <!-- Copyright -->
-                        © 2021 Copyright:
-                        <a href="#">Code Institute Milestone Project 4</a>
+                        <p>© 2021 Copyright:<br>
+                            <a href="https://github.com/Anelairam/ms4">Code Institute Milestone Project 4</a>
+                        </p>
+                        
                     <!-- Copyright -->
                 </div>
             </div>            
@@ -79,5 +77,8 @@
     </footer>
       <!-- Custom javascript -->
       <script src="{% static 'js/base.js' %}"></script>
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 </html>
