--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,7 +32,7 @@
         </div>
         <hr>
         <!-- Singup button redirects to account/signup -->
-        <a class="btn btn-primary" href="{% url 'account_signup' %}" role="button">Sing Up</a>
+        <a class="btn btn-primary" href="{% url 'account_signup' %}" role="button">Or Sing Up</a>
     </div>
 </div>
 <!-- End of table tab -->
